--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
+    "redux": "^4.2.1",
     "toastify": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
