--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "toastify": "^2.0.1",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
