[UPDATE] Update package.json, 03work.js

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "self-project-01",
+  "name": "self-project-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
